# finance-bot

./: .gitignore  README.md  SETUP.md  bot_manager.sh  main.py  pyproject.toml  requirements.txt  screen_commands.md
bot/: __init__.py  finance_bot.py
bot/handlers/: __init__.py
bot/keyboards/: __init__.py  main_keyboards.py
bot/states/: __init__.py  transaction_states.py
config/: __init__.py  settings.py
google_sheets/: __init__.py  client.py
models/: __init__.py  transaction.py
utils/: __init__.py  access_checker.py  cache_manager.py
